Optimize memory usage for Render deployment - reduce pool size and logging

--- a/.env.example
+++ b/.env.example
@@ -1,89 +1,18 @@
-# ===================================
-# SUPABASE CONFIGURATION
-# ===================================
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_ANON_KEY=your-anon-key-here
-SUPABASE_SERVICE_KEY=your-service-role-key-here
+# Database Configuration
+DATABASE_URL=postgresql+psycopg2://postgres:your_password@db.your_project.supabase.co:5432/postgres
 
-# ===================================  
-# DATABASE CONNECTION
-# ===================================
-DATABASE_URL=postgresql://postgres:your-password@db.your-project-id.supabase.co:5432/postgres?sslmode=require
+# Security Keys
+SECRET_KEY=your-super-secret-key-change-in-production
+JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
 
-# ===================================
-# API CONFIGURATION  
-# ===================================
-API_HOST=0.0.0.0
-API_PORT=8000
-DEBUG=true
-API_PREFIX=/api/v1
-
-# ===================================
-# SECURITY
-# ===================================
-SECRET_KEY=your-super-secret-key-change-this-in-production
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# ===================================
-# REGIONAL SETTINGS (SOUTH ASIA)
-# ===================================
-TIMEZONE=Asia/Kolkata
-CURRENCY=INR
-COUNTRY=IN
-LANGUAGE=en-IN
-
-# ===================================
-# BUSINESS SETTINGS
-# ===================================
-COMPANY_NAME=Aaso Pharmaceuticals Pvt Ltd
-GST_NUMBER=your-gst-number
-BUSINESS_HOURS=09:00-18:00
-FINANCIAL_YEAR_START=04-01
-
-# ===================================
-# FILE STORAGE
-# ===================================
-UPLOAD_MAX_SIZE=10485760
-ALLOWED_EXTENSIONS=pdf,jpg,jpeg,png,csv,xlsx
-UPLOAD_FOLDER=uploads
-
-# ===================================
-# EXTERNAL SERVICES (OPTIONAL)
-# ===================================
-# SMS Service (for customer notifications)
-SMS_PROVIDER=twilio
-SMS_API_KEY=your-sms-api-key
-SMS_SENDER_ID=AASOPH
-
-# Email Service (for notifications)
-EMAIL_PROVIDER=smtp
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password
-
-# Payment Gateway (for online payments)
-PAYMENT_GATEWAY=razorpay
-RAZORPAY_KEY_ID=your-razorpay-key
-RAZORPAY_KEY_SECRET=your-razorpay-secret
-
-# ===================================
-# AI SERVICES (OPTIONAL)
-# ===================================
-OPENAI_API_KEY=your-openai-key
-AI_MODEL=gpt-3.5-turbo
-VOICE_LANGUAGE=hi-IN
-
-# ===================================
-# MONITORING & LOGGING
-# ===================================
+# Application Settings
+DEBUG=False
 LOG_LEVEL=INFO
-SENTRY_DSN=your-sentry-dsn-for-error-tracking
+ENVIRONMENT=production
 
-# ===================================
-# DEVELOPMENT SETTINGS
-# ===================================
-ENVIRONMENT=development
-RELOAD=true
-WORKERS=1
+# CORS Settings
+ALLOWED_ORIGINS=["https://yourdomain.com"]
+
+# File Upload Settings
+UPLOAD_PATH=./uploads
+MAX_FILE_SIZE_MB=10
